# click-r

./: Cargo.toml  LICENSE  README.md
src/: main.rs  message.rs  theme.rs  utils.rs
src/update/: click_count_slider_changed.rs  delay_hours_changed.rs  delay_minutes_changed.rs  delay_seconds_changed.rs  duration_hours_changed.rs  duration_minutes_changed.rs  duration_seconds_changed.rs  interval_slider_changed.rs  key_pressed.rs  mod.rs  reset_to_defaults.rs  save_settings.rs  select_mouse_button.rs  start.rs  stop.rs  theme_changed.rs  tick.rs
src/view/: clicks_count.rs  delay_before_start.rs  duration.rs  footer.rs  interval.rs  mod.rs  mouse_button.rs  page.rs  parameter_name.rs  theme.rs
