[package]
name = "click-r"
version = "0.2.0"
edition = "2021"
description = "A simple autoclicker written in Rust"
license = "MIT"
repository = "https://github.com/misha-mad/click-r"
readme = "README.md"
keywords = ["clicker", "autoclicker", "rust", "click-r"]
authors = ["misha-mad"]

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
enigo = "0.2.1"
